# min

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c
